<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="@drawable/title" />

        <ImageButton
            android:id="@+id/mainset"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/set" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="@drawable/content" />

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">
        <ImageView 
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:background="@drawable/ic_data"/>
        <TextView 
            style="@style/indextext"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/index_data"/>
        <ImageButton
            android:id="@+id/btnData" 
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:background="@drawable/ic_in"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">
        <ImageView 
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:background="@drawable/ic_soft"/>
        <TextView
            style="@style/indextext" 
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/index_soft"/>
        <ImageButton
            android:id="@+id/btnSoft" 
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:background="@drawable/ic_in"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">
        
        <ImageView 
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:background="@drawable/ic_hold"/>
        <TextView
            style="@style/indextext" 
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/index_hold"/>
        <ImageButton
            android:id="@+id/btnHold" 
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:background="@drawable/ic_in"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">
        <ImageView 
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:background="@drawable/ic_tools"/>
        <TextView
            style="@style/indextext" 
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/index_tools"/>
        <ImageButton
            android:id="@+id/btnTools" 
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:background="@drawable/ic_in"/>
    </LinearLayout>
    
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/ic_blank" />

</LinearLayout>